[package]
name = "snek"
version = "0.1.0"
authors = ["Julian Kniephoff <me@juliankniephoff.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = { version = "0.2.33" }
console_error_panic_hook = "0.1.5"
rand = "0.7"

[dependencies.getrandom]
version = "0.1"
features = ["wasm-bindgen"]

[dependencies.web-sys]
version = "0.3.10"
features = [
    "Window",
    "Document",
    "HtmlElement",
    "Node",
    "Element",
    "HtmlCanvasElement",
    "CssStyleDeclaration",
    "CanvasRenderingContext2d",
    "OffscreenCanvas",
    "ImageBitmap",
    "EventTarget",
    "HtmlCollection",
    "Performance",
    "KeyboardEvent",
    "FocusEvent",
]

[profile.release]
debug = true