[package]
name = "snek"
version = "0.1.0"
authors = ["Julian Kniephoff <me@juliankniephoff.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.92"
console_error_panic_hook = "0.1.7"
rand = "0.8.5"

[dependencies.getrandom]
version = "0.2"
features = ["js"]

[dependencies.web-sys]
version = "0.3.69"
features = [
    "Window",
    "Document",
    "HtmlElement",
    "Node",
    "Element",
    "HtmlCanvasElement",
    "CssStyleDeclaration",
    "CanvasRenderingContext2d",
    "OffscreenCanvas",
    "ImageBitmap",
    "EventTarget",
    "HtmlCollection",
    "Performance",
    "KeyboardEvent",
    "FocusEvent",
]
